--- a/exercicio-38/index.html
+++ b/exercicio-38/index.html
@@ -8,7 +8,7 @@
   <title>Exercício 38</title>
 </head>
 <body>
-  <div class="container">
+  <!--<div class="container">
     <table data-js="table" class="table table-dark table-striped">
       <thead>
         <tr>
@@ -57,14 +57,14 @@
     </table>
 
     <a data-js="export-table-btn" role="button" class="btn btn-info">Exportar para CSV</a>
-  </div>
+  </div>-->
 
   <div class="container">
     <div class="row justify-content-center">
       <img class="col-sm-6 col-md-5 col-lg-4 col-lg-3 col-xl-3 col-xxl-3" src="./src/img/logo.svg" alt="Logo ">
     </div>
 
-    <div class="row justify-content-center mb-4 mt-4">
+    <div data-js="currencies-container" class="row justify-content-center mb-4 mt-4">
       <div class="col-sm-3 col-lg-2">
         <select data-js="currency-one" class="form-select"></select>
       </div>
