--- a/exercicio-39/index.html
+++ b/exercicio-39/index.html
@@ -10,7 +10,7 @@
 <body>
   <div data-js="accordion" class="accordion">
     <div class="accordion-item">
-      <button data-accordion-header="1" class="accordion-header">
+      <button data-accordion-header="1" data-js="accordion-header" class="accordion-header">
         <strong data-accordion-header="1">Qual é o conteúdo do treinamento?</strong>
         <i data-accordion-header="1" class="fas fa-angle-down"></i>
       </button>
@@ -19,7 +19,7 @@
     </div>
   
     <div class="accordion-item">
-      <button data-accordion-header="2" class="accordion-header">
+      <button data-accordion-header="2" data-js="accordion-header" class="accordion-header">
         <strong data-accordion-header="2">Quais são os requisitos técnicos para entrar?</strong>
         <i data-accordion-header="2" class="fas fa-angle-down"></i>
       </button>
@@ -28,7 +28,7 @@
     </div>
 
     <div class="accordion-item">
-      <button data-accordion-header="3" class="accordion-header">
+      <button data-accordion-header="3" data-js="accordion-header" class="accordion-header">
         <strong data-accordion-header="3">Tenho uma dúvida, como posso falar com você?</strong>
         <i data-accordion-header="3" class="fas fa-angle-down"></i>
       </button>
